Polish the sample code and copy it to the README.md